Include style.css with img

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,6 @@
-<h1>Welcome to Dealership Central</h1>
-<p><a href="/dealerships">View Dealership List</a></p>
-<p><a href="/dealerships/new">Add New Dealership</a></p>
+<img src="/img/muscle-car.jpg" height="250" alt="picture of a car" />
+<div class="title"><h1>Welcome to Dealership Central</h1></div>
+<div class="dealership"><a href="/dealerships">View Dealership List</a>
+</div>
+<div class="dealership"><a href="/dealerships/new">Add New Dealership</a>
+</div>
